tests/ui/not-repeatable.stderr
error[E0277]: `std::net::Ipv4Addr` is not an iterator
 --> $DIR/not-repeatable.rs:6:13
  |
6 |     let _ = quote! { #(#ip)* };
  |             ^^^^^^^^^^^^^^^^^^ `std::net::Ipv4Addr` is not an iterator
  |
  = help: the trait `std::iter::Iterator` is not implemented for `std::net::Ipv4Addr`
  = note: required by `std::iter::IntoIterator::into_iter`
  = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

For more information about this error, try `rustc --explain E0277`.
